# cosmic-ext-connected

./: CLAUDE.md  Cargo.toml  README.md  build-deb.sh  build-flatpak.sh  justfile
cosmic-ext-connected/: Cargo.toml
cosmic-ext-connected/i18n/cs/: cosmic-ext-connected.ftl
cosmic-ext-connected/i18n/en/: cosmic-ext-connected.ftl
cosmic-ext-connected/i18n/sv/: cosmic-ext-connected.ftl
cosmic-ext-connected/src/: app.rs  config.rs  constants.rs  main.rs  notifications.rs  subscriptions.rs
cosmic-ext-connected/src/sms/: conversation_subscription.rs  fetch.rs  logical.rs  mod.rs  store.rs  views.rs
cosmic-ext-connected/src/ui/: device_list.rs  device_page.rs
cosmic-ext-connected/src/views/: settings.rs
data/: io.github.nwxnw.cosmic-ext-connected.metainfo.xml
docs/: CHANGELOG.md  LOGGING.md  NOTIFICATIONS.md  SMS.md
kdeconnect-dbus/src/plugins/: sms.rs
