[package]
name = "cosmic-ext-connected"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Connected - phone connectivity applet for COSMIC™ desktop"

[dependencies]
libcosmic.workspace = true
cosmic-panel-config.workspace = true
kdeconnect-dbus.workspace = true
zbus.workspace = true
tokio.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-journald.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
base64.workspace = true
i18n-embed.workspace = true
i18n-embed-fl.workspace = true
rust-embed.workspace = true
notify-rust.workspace = true
libc.workspace = true

[features]
default = ["wayland"]
wayland = []
